
 *) General

    - Fix a regression introduced in 0.13.0 and make sure to include
      Content-Length 0 with PUT and POST requests. (LIBCLOUD-362, LIBCLOUD-390)
      [Tomaz Muraus]

 *) Compute

    - Fix a bug in the ElasticHosts driver and check for right HTTP status
      code when determining drive imaging success. (LIBCLOUD-363)
      [Bob Thompson]

Changes with Apache Libcloud 0.13.0:

 *) General

   - Add homebrew curl-ca-bundle path to CA_CERTS_PATH. This will make Libcloud
     use homebrew curl ca bundle file (if available) for server certificate
     validation. (LIBCLOUD-324)
     [Robert Chiniquy]

   - Modify OpenStackAuthConnection and change auth_token_expires attribute to
     be a datetime object instead of a string.
     [Tomaz Muraus]

   - Modify OpenStackAuthConnection to support re-using of the existing auth
     token if it's still valid instead of re-authenticating on every
     authenticate() call.
     [Tomaz Muraus]

   - Modify base Connection class to not send Content-Length header if body is
     not provided.
     [Tomaz Muraus]

   - Add the new error class ProviderError and modify InvalidCredsError to
     inherit from it. (LIBCLOUD-331)
     [Jayy Vis]

 *) Misc

   - Add unittest2 library dependency for tests and update some tests to use
     it.
     [Tomaz Muraus]

 *) Compute

    - Fix destroy_node method in the experimental libvirt driver.
      [Aymen Fitati]

    - Add ex_start_node method to the Joyent driver. (LIBCLOUD-319)
      [rszabo50]

    - Fix Python 3 compatibility issue in the ScriptFileDeployment class.
      (LIBCLOUD-321)
      [Arfrever Frehtes Taifersar Arahesis]

    - Add ex_set_metadata_entry and ex_get_metadata method to the VCloud driver.
      (LIBCLOUD-318)
      [Michel Samia]

    - Various improvements and bug-fixes in the VCloud driver. (LIBCLOUD-323)
      [Michel Samia]

    - Modify list_sizes method in the OpenStack driver to include