@@ -14,6 +14,13 @@ Changes with Apache Libcloud in development
       code when determining drive imaging success. (LIBCLOUD-363)
       [Bob Thompson]
 
+  *) Storage
+
+    - Fix a regression with calling encode_container_name instead of
+      encode_object_name on object name in get_object method.
+      Reported by Ben Meng (LIBCLOUD-366)
+      [Tomaz Muraus]
+
 Changes with Apache Libcloud 0.13.0:
 
  *) General
